--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
- <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-  </div>
-  <div class="toast-body">
-    Hello, world! This is a toast message.
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body">
-      Hello, world! This is a toast message.
+<html>
+<head>
+<style>
+div{font-size:90;}
+p{font-size:30;
+text-align:justify;}
+</style>
+</head>
+<font color="white">
+<center>
+<div>
+<b>
+Conwood
+</b>
+</div>
+<center>
+</font>
+<br>
+&nbsp<br>
+<img src="Conwood.jpg" width="400" height="300">
+<body background="Woods6.jpg" alink="white" vlink="white" link="white">
+<br>
+&nbsp<br>
+&nbsp<br>
+<p>
+Fill some of your information to check out this website.
+We will use this information to uptade you with our contents as soon as we post them.We will provide you
+with the blogs you are interested in.
+Also you can use your account created on this website to save the blog you require.You can access this
+website on any device by using your username and password and keep it secured.You can post your blogs
+too,if interested after going through reliability check, done by our experts.
+We are assuring you that the privacy of this information will be maintained.this information will
+be kept confidential.
+</p>
+<marquee><font size="5"><b>
+<a href="Main Page2.html">
+Click here to fill the information
+</a>
+</b></font></marquee>
+</body>
+</html>
       
