--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ We are assuring you that the privacy of this information will be maintained.this
 be kept confidential.
 </p>
 <marquee><font size="5"><b>
-<a href="https://priyanka-balivada.github.io/Practical-DM/">
+<a href="priyanka-balivada.github.io/Practical-DM/">
 Click here to fill the information
 </a>
 </b></font></marquee>
