--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@ be kept confidential.
 Click here to fill the information
 </a>
 </b></font></marquee>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LX9DJ1GELJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LX9DJ1GELJ');
+</script>
 </body>
 </html>
       
