--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ Click here to fill the information
 </a>
 </b></font></marquee>
       <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LX9DJ1GELJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8WFWMMXPKR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LX9DJ1GELJ');
+  gtag('config', 'G-8WFWMMXPKR');
 </script>
 </body>
 </html>
