--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ Conwood
 &nbsp<br>
 <br>
 &nbsp<br>
+      <img src="Conwood.jpg" width="400" height="300">
+      <body background="Woods6.jpg" alink="white" vlink="white" link="white">
 &nbsp<br>
 <p>
 Fill some of your information to check out this website.
