--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ We are assuring you that the privacy of this information will be maintained.this
 be kept confidential.
 </p>
 <marquee><font size="5"><b>
-<a href="Main Page2.html">
+<a href="https://github.com/Priyanka-Balivada/Practical-DM/blob/main/Main%20Page2.html">
 Click here to fill the information
 </a>
 </b></font></marquee>
