--- a/Page2.html
+++ b/Page2.html
@@ -14,7 +14,7 @@ border-width:100%;}
 
 <div>
 <font size="35">
-<img src="slide1.jpg" width="200" height="100" align="left" hspace="10" vspace="10">
+<img src="Slide1.jpg" width="200" height="100" align="left" hspace="10" vspace="10">
 
 <a href="Slide1.html">
 <p>Remembering Abdul Kalam,one of the first leaders to talk about skill 
@@ -28,7 +28,7 @@ border-width:100%;}
 </div>
 
 <div>
-<img src="slide2.jpg" width="200" height="100" align="left" hspace="10" vspace="10">
+<img src="Slide2.jpg" width="200" height="100" align="left" hspace="10" vspace="10">
 <a href="Slide2.html">
 <p>Global biodiversity is in crisis,with tropical oceans hardest hit:Study
 &nbsp<br>
