--- a/Page1.html
+++ b/Page1.html
@@ -7,8 +7,7 @@ p{text-align:justify;}
 </head>
 <body>
 
-Current affairs all over the world............................
-World's Students Day celebrated on the birthday............<br>
+Facts & Figures<br>
 <font color="blue">
 <a href="Page2.html">
 file:///C:/Documents%20and%20Settings/Administrator/<br>
@@ -21,8 +20,7 @@ Desktop/Miniproject/Page2.html<br>
 
 
 &nbsp<br>
-News about Prime Minister Narendra Modi..........................
-With all the updates.......................................<br>
+Prime Minister Narendra Modi Endeavours<br>
 <a href="Narendra Modi.html">
 file:///C:/Documents%20and%20Settings/Administrator/<br>
 Desktop/Miniproject/Narendra%20Modi.html<br>
@@ -33,8 +31,7 @@ Desktop/Miniproject/Narendra%20Modi.html<br>
 
 
 &nbsp<br>
-News related to geographical chages and geography across the world...........
-Different geographical researches.......................................
+Geographical Enlightenments
 <a href="Page3.html"><br>
 file:///C:/Documents%20and%20Settings/Administrator/<br>
 Desktop/Miniproject/Page3.html
