--- a/Page1.html
+++ b/Page1.html
@@ -3,6 +3,7 @@
 <style>
 body{font-size:35;}
 p{text-align:justify;}
+  a{font-size:20;}
 </style>
 </head>
 <body>
@@ -10,8 +11,7 @@ p{text-align:justify;}
 Facts & Figures<br>
 <font color="blue">
 <a href="Page2.html">
-file:///C:/Documents%20and%20Settings/Administrator/<br>
-Desktop/Miniproject/Page2.html<br>
+file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page2.html<br>
 </a>
 </font>
 </font>
@@ -22,8 +22,7 @@ Desktop/Miniproject/Page2.html<br>
 &nbsp<br>
 Prime Minister Narendra Modi Endeavours<br>
 <a href="Narendra Modi.html">
-file:///C:/Documents%20and%20Settings/Administrator/<br>
-Desktop/Miniproject/Narendra%20Modi.html<br>
+file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra%20Modi.html<br>
 </a>
 </font>
 &nbsp<br>
@@ -33,8 +32,7 @@ Desktop/Miniproject/Narendra%20Modi.html<br>
 &nbsp<br>
 Geographical Enlightenments
 <a href="Page3.html"><br>
-file:///C:/Documents%20and%20Settings/Administrator/<br>
-Desktop/Miniproject/Page3.html
+file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html
 
 
 
