--- a/Page1.html
+++ b/Page1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body{font-size:35;}
+body{font-size:35;bgcolor:"black";text:"white";}
 p{text-align:justify;}
   a{font-size:20;}
 </style>
