--- a/Page1.html
+++ b/Page1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body{font-size:35; background-color:black}
+body{font-size:35; background-color:black; color:white}
 p{text-align:justify;}
   a{font-size:20;}
 </style>
