--- a/Page1.html
+++ b/Page1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body{font-size:35; background-color:#F5F5F5;}
+body{font-size:35; background-color:#BC8F8F;}
 p{text-align:justify;}
   a{font-size:20;}
 </style>
