--- a/Page1.html
+++ b/Page1.html
@@ -4,6 +4,7 @@
 body{font-size:35; background-color:#BC8F8F;}
 p{text-align:justify;}
   a{font-size:20;}
+  a:hover{color:#7FFF00;}
 </style>
 </head>
 <body>
