--- a/Page1.html
+++ b/Page1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body{font-size:35; background-color:#BC8F8F;}
+body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
   a{font-size:20;}
   a:hover{color:#7FFF00;}
