--- a/Page1.html
+++ b/Page1.html
@@ -4,7 +4,8 @@
 body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
   a{font-size:20;}
-  a:hover{color:#7FFF00;}
+  a:hover{color:green;}
+  a:active{color:blue;}
 </style>
 </head>
 <body>
