--- a/Page1.html
+++ b/Page1.html
@@ -6,37 +6,39 @@ p{text-align:justify;}
   a{font-size:20;}
   a:hover{color:red;}
   a:active{color:blue;}
+div{margin:50px;
+  border-style:solid;
+  border-width:100%;}  
 </style>
 </head>
 <body>
 
+<div>
 Facts & Figures<br>
-<font color="blue">
 <a href="Page2.html">
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page2.html<br>
 </a>
-</font>
-</font>
+</div>  
 &nbsp<br>
 <hr>
 
 
 &nbsp<br>
+<div>  
 Prime Minister Narendra Modi Endeavours<br>
 <a href="Narendra Modi.html">
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra%20Modi.html<br>
 </a>
-</font>
+</div>  
 &nbsp<br>
 <hr>
 
 
 &nbsp<br>
-Geographical Enlightenments
+<div>  
+Geographical Enlightenments  
 <a href="Page3.html"><br>
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html
-
-
-
+</div>
 </body>
 </html>
