--- a/Page1.html
+++ b/Page1.html
@@ -17,9 +17,9 @@ div{margin:50px;
 Facts & Figures<br>
 <a href="Page2.html">
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page2.html<br>
-</a>
-</div>  
+</a>  
 &nbsp<br>
+</div>
 <hr>
 
 
@@ -29,8 +29,8 @@ Prime Minister Narendra Modi Endeavours<br>
 <a href="Narendra Modi.html">
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra%20Modi.html<br>
 </a>
-</div>  
 &nbsp<br>
+</div>    
 <hr>
 
 
@@ -39,6 +39,7 @@ file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra
 Geographical Enlightenments  
 <a href="Page3.html"><br>
 file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html
+&nbsp<br>  
 </div>
 </body>
 </html>
