--- a/Page1.html
+++ b/Page1.html
@@ -2,13 +2,14 @@
 <head>
 <style>
 body{font-size:35; background-color:#E6E6FA;}
-p{text-align:justify;}
+p{text-align:justify;
+  text-indent:20px; }
   a{font-size:20;}
   a:hover{color:red;}
   a:active{color:blue;}
 div{margin:50px;
   border-style:solid;
-  border-width:100%;}  
+  border-width:50%;}  
 </style>
 </head>
 <body>
