--- a/Page1.html
+++ b/Page1.html
@@ -2,14 +2,14 @@
 <head>
 <style>
 body{font-size:35; background-color:#E6E6FA;}
-p{text-align:justify;
-  text-indent:20px; }
+p{text-align:justify;}
   a{font-size:20;}
   a:hover{color:red;}
   a:active{color:blue;}
-div{margin:50px;
+div{margin:30px;
   border-style:solid;
-  border-width:50%;}  
+  border-width:100%;
+  text-indent:20px;}  
 </style>
 </head>
 <body>
