--- a/Page1.html
+++ b/Page1.html
@@ -39,7 +39,8 @@ file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra
 <div>  
 Geographical Enlightenments  
 <a href="Page3.html"><br>
-file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html
+file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html<br>
+  </a>  
 &nbsp<br>  
 </div>
 </body>
