--- a/Page1.html
+++ b/Page1.html
@@ -8,7 +8,9 @@ p{text-align:justify;}
   a:hover{color:red;}
   a:active{color:blue;}
 div{margin:25px;
+  text-color:white;
   border-style:solid;
+  border-color:#696969;
   border-width:100%;
   text-indent:20px;}  
 </style>
