--- a/Page1.html
+++ b/Page1.html
@@ -3,8 +3,8 @@
 <style>
 body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
-  a{font-size:20;}
-  a:link{text-indent:20px;}
+  a{font-size:20;
+     text-indent:20px;}
   a:hover{color:red;}
   a:active{color:blue;}
 div{margin:25px;
