--- a/Page1.html
+++ b/Page1.html
@@ -9,8 +9,7 @@ p{text-align:justify;}
   a:active{color:blue;}
 div{margin:25px;
   text-color:white;
-  border-style:solid;
-  border-color:#696969;
+  border:1px solid #696969;
   border-width:100%;
   text-indent:20px;}  
 </style>
