--- a/Page1.html
+++ b/Page1.html
@@ -8,7 +8,7 @@ p{text-align:justify;}
   a:hover{color:red;}
   a:active{color:blue;}
 div{margin:25px;
-  text-color:white;
+  color:white;
   border:1px solid #696969;
   border-width:100%;
   text-indent:20px;}  
