--- a/Page1.html
+++ b/Page1.html
@@ -8,8 +8,8 @@ p{text-align:justify;}
   a:hover{color:red;}
   a:active{color:blue;}
 div{margin:25px;
-  color:white;
-  border:1px solid #696969;
+  color:#DEB887;
+  border:solid #696969;
   border-width:100%;
   text-indent:20px;}  
 </style>
