--- a/Page1.html
+++ b/Page1.html
@@ -5,7 +5,7 @@ body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
   a{font-size:20;
      text-indent:20px;}
-  a:hover{color:red;}
+  a:hover{color:green;}
   a:active{color:blue;}
 div{margin:25px;
   color:#D2691E;
