--- a/Page1.html
+++ b/Page1.html
@@ -5,10 +5,10 @@ body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
   a{font-size:20;
      text-indent:20px;}
-  a:hover{color:#9ACD32;}
+  a:hover{color:#808000;}
   a:active{color:blue;}
 div{margin:25px;
-  color:#B8860B;
+  color:#D2691E;
   border:solid #696969;
   border-width:100%;
   text-indent:20px;}  
