--- a/Page1.html
+++ b/Page1.html
@@ -8,7 +8,7 @@ p{text-align:justify;}
   a:hover{color:#808000;}
   a:active{color:blue;}
 div{margin:25px;
-  color:#D2691E;
+  color:black;
   border:solid #696969;
   border-width:100%;
   text-indent:20px;}  
