--- a/Page1.html
+++ b/Page1.html
@@ -5,7 +5,7 @@ body{font-size:35; background-color:#E6E6FA;}
 p{text-align:justify;}
   a{font-size:20;
      text-indent:20px;}
-  a:hover{color:#808000;}
+  a:hover{color:#228B22;}
   a:active{color:blue;}
 div{margin:25px;
   color:#D2691E;
@@ -19,7 +19,7 @@ div{margin:25px;
 <div>
 Facts & Figures<br>
 <a href="Page2.html">
-file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page2.html<br>
+https://priyanka-balivada.github.io/Practical-DM/Page2.html<br>
 </a>  
 &nbsp<br>
 </div>
@@ -30,7 +30,7 @@ file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page2.ht
 <div>  
 Prime Minister Narendra Modi Endeavours<br>
 <a href="Narendra Modi.html">
-file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra%20Modi.html<br>
+https://priyanka-balivada.github.io/Practical-DM/Narendra%20Modi.html<br>
 </a>
 &nbsp<br>
 </div>    
@@ -41,7 +41,7 @@ file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Narendra
 <div>  
 Geographical Enlightenments  
 <a href="Page3.html"><br>
-file:///C:/Documents%20and%20Settings/Administrator/Desktop/Miniproject/Page3.html<br>
+https://priyanka-balivada.github.io/Practical-DM/Page3.html<br>
   </a>  
 &nbsp<br>  
 </div>
