--- a/Slide1.html
+++ b/Slide1.html
@@ -4,6 +4,19 @@
 p{text-align:justify;
 font-size:25;}
 div{text-align:center;}
+ 
+.zoom {
+  padding: 50px;
+  background-color: green;
+  transition: transform .2s; /* Animation */
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+} 
 </style>
 <b><h1>
 Remembering Abdul Kalam,one of the first leaders to talk about skill development
@@ -12,7 +25,7 @@ Remembering Abdul Kalam,one of the first leaders to talk about skill development
 On APJ Abdul Kalam's birth anniversary,let us know a little more about his contribution towards encouraging youth in seeking skill development training.
 <hr>
 </p>
-<div>
+<div class="zoom">
 <img src="Slide1B.jpg" width="400" height="400" vertical align="middle" horizontal align="middle">
 </div>
 <p>
