--- a/Slide1.html
+++ b/Slide1.html
@@ -13,6 +13,7 @@ div{text-align:center;}
   margin: 0 auto;
 }
 
+ .zoom a{overflow hidden;}
 .zoom:hover {
   transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 } 
